// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Channels selectors - channelById 1`] = `
Object {
  "address": "zs1testaddress1",
  "advertFee": 0.15,
  "description": "Channel about 1",
  "id": 1,
  "keys": Object {
    "ivk": "incoming-viewing-key-1",
    "sk": "test-secret-key",
  },
  "name": "Channel 1",
  "private": true,
  "unread": 12,
}
`;

exports[`Channels selectors - channels 1`] = `
Object {
  "data": Array [
    Object {
      "address": "ztestsapling1dfjv308amnk40s89trkvz646ne69553us0g858mmpgsw540efgftn4tf25gts2cttg3jgk9y8lx",
      "description": "\\"Try out our working demo of e-commerce on Zbay!",
      "keys": Object {
        "ivk": "zivktestsapling1algnz2x84pqcnfdxrlntw73wpuqm3v568cepf5tuctyusm9javpqyjyzqy",
      },
      "name": "store",
      "private": true,
    },
    Object {
      "address": "ztestsapling1dfjv308amnk40s89trkvz646ne69553us0g858mmpgsw540efgftn4tf25gts2cttg3jgk9y8lx",
      "description": "This is a general channel available to all users of Zbay by default.",
      "keys": Object {
        "ivk": "zivktestsapling1algnz2x84pqcnfdxrlntw73wpuqm3v568cepf5tuctyusm9javpqyjyzqy",
      },
      "name": "zbay",
      "private": true,
    },
    Object {
      "address": "zs1testaddress0",
      "advertFee": 0.15,
      "description": "",
      "id": 0,
      "keys": Object {
        "ivk": "incoming-viewing-key-0",
        "sk": "test-secret-key",
      },
      "name": "Channel 0",
      "private": false,
      "unread": 12,
    },
    Object {
      "address": "zs1testaddress1",
      "advertFee": 0.15,
      "description": "Channel about 1",
      "id": 1,
      "keys": Object {
        "ivk": "incoming-viewing-key-1",
        "sk": "test-secret-key",
      },
      "name": "Channel 1",
      "private": true,
      "unread": 12,
    },
    Object {
      "address": "zs1testaddress2",
      "advertFee": 0.15,
      "description": "",
      "id": 2,
      "keys": Object {
        "ivk": "incoming-viewing-key-2",
        "sk": "test-secret-key",
      },
      "name": "Channel 2",
      "private": false,
      "unread": 12,
    },
  ],
  "loader": Object {
    "loading": true,
    "message": "Loading messages",
  },
}
`;

exports[`Channels selectors - loader 1`] = `
Object {
  "loading": true,
  "message": "Loading messages",
}
`;

exports[`Channels selectors - ownedChannels 1`] = `
Array [
  Object {
    "address": "zs1testaddress0",
    "advertFee": 0.15,
    "description": "",
    "id": 0,
    "keys": Object {
      "ivk": "incoming-viewing-key-0",
      "sk": "test-secret-key",
    },
    "name": "Channel 0",
    "private": false,
    "unread": 12,
  },
  Object {
    "address": "zs1testaddress1",
    "advertFee": 0.15,
    "description": "Channel about 1",
    "id": 1,
    "keys": Object {
      "ivk": "incoming-viewing-key-1",
      "sk": "test-secret-key",
    },
    "name": "Channel 1",
    "private": true,
    "unread": 12,
  },
  Object {
    "address": "zs1testaddress2",
    "advertFee": 0.15,
    "description": "",
    "id": 2,
    "keys": Object {
      "ivk": "incoming-viewing-key-2",
      "sk": "test-secret-key",
    },
    "name": "Channel 2",
    "private": false,
    "unread": 12,
  },
]
`;

exports[`Channels selectors - priceOracleChannel 1`] = `
Object {
  "address": "ztestsapling1rwqrk7uclurs5dqm70g4zf0rh9dmjf60qqtw2n68pa37ycs2zccglcymjg0nnmus70m3wkdyxx0",
  "id": "priceOracleChannel",
  "keys": Object {
    "ivk": "zivktestsapling194t7fk8ns0v2u4jysmrmwyh2ymq52t5378ey8jym23d2dpy3d5pssyk97t",
  },
  "name": "priceOracle",
}
`;
